# runtime_polymorphism_sean_parent

./: CMakeLists.txt  README.md
include/: document.hpp
test/: CMakeLists.txt  runtime_polymorphism.cpp  template.cpp
